--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,16 +56,20 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
+
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+        REPOSITORY_URI: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}
+
       run: |
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+        docker build -t ${{ secrets.ECR_REGISTRY }} .
+        docker tag ${{ secrets.ECR_REGISTRY }} $REPOSITORY_URI:$IMAGE_TAG
+        docker push $REPOSITORY_URI:$IMAGE_TAG
+        echo "image=$REPOSITORY_URI:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
