--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -70,12 +70,16 @@ jobs:
         docker tag ${{ secrets.ECR_REGISTRY }} $REPOSITORY_URI:$IMAGE_TAG
         docker push $REPOSITORY_URI:$IMAGE_TAG
         echo "image=$REPOSITORY_URI:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      
+    - name: Write info from secret to file task-def.json
+      id: write-task-def
+      run: echo "${{ secrets.ECS_TASK_DEFINITION }}" > task-def.json
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ${{ secrets.ECS_TASK_DEFINITION }}
+        task-definition: task-def.json
         container-name: ${{ secrets.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
