--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -73,7 +73,7 @@ jobs:
       
     - name: Write info from secret to file task-def.json
       id: write-task-def
-      run: echo "${{ secrets.ECS_TASK_DEFINITION }}" > task-def.json
+      run: printf "%s" "${{ secrets.ECS_TASK_DEFINITION }}" > task-def.json
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
